# tse-stock

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  stock.rs
